2007-11-02  Thomas Heller  <theller@python.net>

	* Bump version number to 0.4.0.
	Released version 0.4.0.

	* In _wrap_coclass, attach a __clsid attribute to the returned
	object. This allows, for example, to find outgoing interfaces when
	a CoClass is returned from a COM method call.

2007-10-26  Thomas Heller  <theller@python.net>

	* Implemented property get, put, and putref with arguments
	in comtypes.client.dynamic.

	* When a COM property has both propput and propputref accessor
	methods, the Python property fset methods determines the type of
	the argument.

	If the argument is a COM interface pointer, or a VARIANT
	containing one, then propputref is called, otherwise proput is
	called to set the property.

	* Allow the creation of SAFEARRAY(UDT) types even if the UDT has
	no _recordinfo_.  Creating instances of these types will fail
	however since no IRecordInfo pointer can be created.  This change
	allows to import typelib wrappers that have UDTs without guids.

2007-10-24  Thomas Heller  <theller@python.net>

	* When a COM property has a 'propputref' but no 'propput' accessor
	method, use the former in the same way as a 'propput' would work.
	When both 'propputref' and 'propput' are present, raise a
	TypeError because we cannot handle this case for now.

	* Fixed infinit recursion error in __getattr__ implementation.
	
	* comtypes.dynamic._Dispatch now implements a __setattr__ methods
	that will call to Invoke() with DISPATCH_PROPERTYPUT or
	DISPATCH_PROPERTYPUTREF.
	
	* Handle DISPATCH_PROPERTYPUTREF in IDispatch.Invoke
	implementation.

	* comtypes.dynamic._Dispatch objects can now be used as VARIANT
	value.

2007-10-22  Thomas Heller  <theller@python.net>

	* The repr of a COM pointer instance now includes the pointer
	value for easier debugging.

2007-10-17  Thomas Heller  <theller@python.net>

	* Disable the VT_UNKNOWN and VT_DISPATCH safearray codes, they do
	not work yet.

	* More multidimensional safearray tests, bug fixes.
	